# NRCS_SIMWE

./: .flake8  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  README.md  _quarto.yml  _variables.yml  addons.txt  grass.scss  index.qmd  requirements.txt  site-CRS-info.txt
.github/workflows/: pr-check.yml  publish.yml
_freeze/site_libs/quarto-listing/: list.min.js
data/: index.qmd
grass_conf/: ssurgo_colors.txt
notebooks/: agu2024.ipynb  agu2024.qmd  agu2024_combined.ipynb  index.qmd  interactive.ipynb  model_run_variability.qmd  sensitivity_analysis.qmd  ssurgo.qmd  workshop.ipynb
notebooks/output/combined_stats/: combined_analysis_7.csv  combined_simulations_7.csv
output/: REPORT_TEMPLATE.md  project_reports.qmd
output/SFREC/: report.md  report.qmd
output/SFREC/sensitivity_1/: sensitivity_analysis_1.csv
output/SFREC/sensitivity_5/: sensitivity_analysis_1.csv
output/SFREC/sensitivity_7/: metadata_depth_analysis_1.csv  sensitivity_analysis_1.csv  watershed_stats.json
output/SJER/: report.md  report.qmd
output/SJER/sensitivity_1/: metadata_analysis_1.csv  metadata_depth_analysis_1.csv  sensitivity_analysis_1.csv
output/SJER/sensitivity_7/: metadata_depth_analysis_1.csv  sensitivity_analysis_1.csv  watershed_stats.json
output/clay-center/: clay-center.md  report.md  report.qmd
output/clay-center/sensitivity_1/: metadata_analysis_1.csv  metadata_depth_analysis_1.csv  sensitivity_analysis_1.csv
output/clay-center/sensitivity_3/: sensitivity_analysis_1.csv
output/clay-center/sensitivity_4/: sensitivity_analysis_1.csv
output/clay-center/sensitivity_5/: sensitivity_analysis_1.csv
output/clay-center/sensitivity_6/: sensitivity_analysis_1.csv
output/clay-center/sensitivity_7/: metadata_depth_analysis_1.csv  sensitivity_analysis_1.csv  watershed_stats.json
output/coweeta/: params.yml  report.md  report.qmd
output/coweeta/sensitivity_7/: watershed_stats.json  (+2 more)
output/tx069-playas/: report.md  report.qmd
presentations/: .gitignore  agu_2024.qmd  agu_2024.quarto_ipynb  agu_2024.tex  index.qmd
presentations/agu2024/: abstract.qmd  agu_2024.aux  agu_2024.qmd
presentations/iale2025/: abstract.qmd  iale2025.qmd
publications/: index.qmd
scripts/: create_figures.py  create_locations.py  download_data.py  geomorphology.py  groundwater.py  gutiles.py  helena.py  import_ksat.py  index.qmd  sensitivity.py  simulation.py  watershed_extent.py
templates/: _report-template.qmd  report-template.qmd  title-slide.html
tools/: index.qmd
tools/g.ssurgo.query/: g.ssurgo.query.py  requirements.txt
tools/r.in.nrcs/: r.in.nrcs.py
tools/r.soildb/: CMakeLists.txt  Makefile
tools/r.soildb/libsoil/: CMakeLists.txt  Makefile  __init__.py  soillib.py
tools/r.soildb/r.in.ssurgo/: CMakeLists.txt  Makefile  r.in.ssurgo.html  r.in.ssurgo.md  r.in.ssurgo.py
tools/r.soildb/r.in.ssurgo/testsuite/: test_r_in_ssurgo.py
(+44 files in other folders)
